#2 add simple http server to join game, view board state, send moves add simple move type to contain and validate moves