@@ -1,5 +1,8 @@
 package com.boardgame.core;
 
+import com.boardgame.core.model.Move;
+
+import java.io.File;
 import java.util.List;
 import java.util.Map;
 import java.util.ArrayList;
@@ -9,14 +12,12 @@ public class GameManager {
 
     private GameBoard activeBoard;
     private GameServer server;
-    private GameBoardEncoderDecoder boardEncDec;
     private List<Player> players;
     private Player currentPlayer;
     private boolean gameStarted;
 
     private GameManager() {
         players = new ArrayList<>();
-        boardEncDec = new GameBoardEncoderDecoder();
     }
 
     public static GameManager getInstance() {
@@ -37,18 +38,44 @@ public class GameManager {
     }
 
     public void startGame(){
-        currentPlayer = players.get(0);
-        gameStarted=true;
+        currentPlayer = players.getFirst();
+        String frontEndPath = new File("src/view").getAbsolutePath();
+        server = new GameServer(this, activeBoard, "localhost", 8080, frontEndPath);
+        try {
+            server.startServer();
+        } catch (Exception e) {
+            System.out.println("Failed to start server due to exception: " + e);
+        }
+        gameStarted = true;
         // TODO: implement generic game start logic
     }
 
     public void printBoardJson(){
-        System.out.println(boardEncDec.encodeBoard(activeBoard));
+        System.out.println(activeBoard.toJson());
+    }
+
+    public boolean executeMove(Move move) {
+        if (move.getPlayer() != currentPlayer) {
+            return false;
+        }
+
+        return move.execute();
+    }
+
+    public String joinGame() {
+        for (Player player : players) {
+            if (player.getId() == null) {
+                String id = Player.generateId();
+                player.setId(id);
+                return id;
+            }
+        }
+        return "failed";
     }
 
     public void passTurn(){
         int currentPlayerIndex = players.indexOf(currentPlayer);
-        int nextPlayer = (currentPlayerIndex + 1) % players.size();  
+        int nextPlayer = (currentPlayerIndex + 1) % players.size();
         currentPlayer = players.get(nextPlayer);
     }
 
